--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Raleway', cursive;
   font-size: 16px;
 }
 a {
