--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,7 +21,7 @@ a {
   margin: 0;
 }
 .main-app {
-  padding-top: 11rem;
+  padding-top: 9rem;
 }
 
 .main {
@@ -36,4 +36,5 @@ a {
 h1 {
   text-align: center;
   font-size: 42px;
+  line-height: 1.2;
 }
