--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Raleway', cursive;
+  // font-family: 'Raleway', cursive;
+  font-family: 'Quicksand', sans-serif;
   font-size: 16px;
 }
 a {
@@ -21,13 +22,40 @@ a {
   margin: 0;
 }
 .main-app {
-  padding-top: 9rem;
+  // padding-top: 9rem;
 }
 
 .main {
   margin: 0 auto;
   width: 100%;
 }
+
+.intro {
+  width: 100%;
+  min-height: 800px;
+  padding: 5.5rem 8rem;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  // flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-bottom: 1rem;
+  h1 {
+    text-align: left;
+    font-size: 50px;
+  }
+
+  p {
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 1.6;
+    margin-bottom: 4rem;
+    max-width: 800px;
+  }
+}
+
 .button {
   cursor: pointer;
   transition: all 0.3s;
@@ -37,4 +65,20 @@ h1 {
   text-align: center;
   font-size: 42px;
   line-height: 1.2;
+}
+h3 {
+  font-size: 1.375em;
+  font-weight: 600;
+}
+
+//Helper classes
+.text-bold {
+  font-weight: 800;
+}
+.text-semi-bold {
+  font-weight: 600;
+}
+
+.text-center {
+  text-align: center;
 }
