--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  // font-family: 'Raleway', cursive;
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
 }
@@ -37,11 +36,9 @@ a {
   background-position: center;
   background-size: cover;
   display: flex;
-  // flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin-bottom: 1rem;
   h1 {
     text-align: left;
     font-size: 50px;
@@ -81,4 +78,22 @@ h3 {
 
 .text-center {
   text-align: center;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .main .intro {
+    padding: 6rem 1.5rem;
+    min-height: 100vh;
+
+    .intro-title {
+      font-size: 44px;
+      margin-top: 4rem;
+    }
+
+    .intro-text {
+      font-size: 22px;
+      margin-bottom: 0;
+    }
+  }
 }
